--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo-container" >
-           <img src="Genzity.JPG" alt="Genzity Logo" width="300px">
+           <img src="C:\Users\hp\Downloads\Genzity.JPG" alt="" width="300px">
         </div>
         <h1 class="neon-text animate-bounce">Welcome to Genzity</h1>
         <p>Your Premier Tech Partner for Innovation and Excellence</p>
