--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <section id="discord" class="animate-fade scroll-reveal">
         <h2 class="neon-text">Join Our Discord Server</h2>
         <p>Connect with our community, get updates, and collaborate on exciting projects. Join us on Discord!</p>
-        <a href="https://discord.gg/XxGy8cQJ" target="_blank"><button>Join Discord</button></a>
+        <a href="https://discord.gg/SvA8buheeR" target="_blank"><button>Join Discord</button></a>
     </section>
     
     <footer>
